# kortecx-xi

./: .gitignore  Makefile  README.md  pyproject.toml
backend/: Cargo.toml
src/frontend/: package-lock.json  package.json
src/kortecx/cli/: Cli.py
src/kortecx/frontend/: package-lock.json
src/kortecx/handlers/api/: _requests_handler.py
src/kortecx/handlers/resources/: frontend.py
